MyEmpStream First Commit
Signed-off-by: Pratheush <pratheush@outlook.com>